--- a/external.css
+++ b/external.css
@@ -1,10 +1,10 @@
 body {font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif; -webkit-font-smoothing: antialiased;}
-table {font-size: 0.87em;}
+nav {}
 td {padding-left: 30px}
 .card {margin-top: 40px}
 .card-text {padding-left: 20px}
 .jumbotron, footer {background-color: #42b983; color: white}
-p {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
+p, table {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
 h1
 h2
-h4 {font-weight: bold}
+h3 {font-weight: bolder;}
