debugged font-size

--- a/external.css
+++ b/external.css
@@ -4,7 +4,7 @@ td {padding-left: 30px}
 .card {margin-top: 40px}
 .card-text {padding-left: 20px}
 .jumbotron, footer {background-color: #42b983; color: white}
-p, table {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
+p, table, ul {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
 h1
 h2
 h3 {font-weight: bolder;}
