--- a/external.css
+++ b/external.css
@@ -4,7 +4,9 @@ td {padding-left: 30px}
 .card {margin-top: 40px}
 .card-text {padding-left: 20px}
 .jumbotron, footer {background-color: #42b983; color: white}
+footer {margin-top: 30px}
 p, table, ul {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
+img {margin-bottom: 20px}
 h1
 h2
 h3 {font-weight: bolder;}
