--- a/external.css
+++ b/external.css
@@ -1,5 +1,6 @@
 body {font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif; -webkit-font-smoothing: antialiased;}
 .nav {font-size: 20px;}
+tr {line-height: 20px}
 td {padding-left: 30px}
 .card {margin-top: 40px}
 .card-text {padding-left: 20px}
@@ -7,6 +8,4 @@ td {padding-left: 30px}
 footer {margin-top: 100px}
 p, table, ul {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
 img {margin-bottom: 40px}
-h1
-h2
 h3 {font-weight: bolder;}
