--- a/external.css
+++ b/external.css
@@ -1,7 +1,6 @@
 body {font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif; -webkit-font-smoothing: antialiased;}
 .nav {font-size: 20px;}
-tr {line-height: 35px}
-td {padding-left: 30px}
+td {padding: 30px 10px 0px 10px}
 .card {margin-top: 40px}
 .card-text {padding-left: 20px}
 .jumbotron, footer {background-color: #42b983; color: white}
