--- a/external.css
+++ b/external.css
@@ -6,5 +6,6 @@ td {padding: 30px 10px 0px 10px}
 .jumbotron, footer {background-color: #42b983; color: white}
 footer {margin-top: 100px}
 p, table, ul {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
+table {border: solid 1px; vertical-align: middle;}
 img {margin-bottom: 40px}
 h3 {font-weight: bolder;}
