--- a/external.css
+++ b/external.css
@@ -8,3 +8,4 @@ footer {margin-top: 100px}
 p, table, ul {font-size: 18px; display: block; margin-top: 1em; margin-bottom: 1em}
 img {margin-bottom: 40px}
 h3 {font-weight: bolder;}
+#map {height: 400px; background-color: grey;}
