--- a/external.css
+++ b/external.css
@@ -6,10 +6,10 @@ body {
 .container, .container-fluid {
     background: rgba(255, 255, 255, 0.6);
 }
-/*a {
+.navbar-nav a {
     color: white;
     font-size: 1em;
-}*/
+}
 td {
     padding: 30px 10px 0px 10px
 }
