--- a/external.css
+++ b/external.css
@@ -6,7 +6,7 @@ body {
 .container, .container-fluid {
     background: rgba(255, 255, 255, 0.6);
 }
-.navbar-nav a {
+.nav-light, .navbar, .nav-link, a {
     color: white;
     font-size: 1em;
 }
