--- a/external.css
+++ b/external.css
@@ -6,8 +6,8 @@ body {
 .container, .container-fluid {
     background: rgba(255, 255, 255, 0.6);
 }
-.nav-light, .navbar, .nav-link, a {
-    color: white;
+.nav-light .navbar-nav .nav-link, a {
+    color: rgb(255, 255, 255);
     font-size: 1em;
 }
 td {
