--- a/external.css
+++ b/external.css
@@ -7,8 +7,8 @@ body {
     background: rgba(255, 255, 255, 0.6);
 }
 .nav-light .navbar-nav .nav-link, a {
-    color: rgb(255, 255, 255);
-    font-size: 1em;
+    color: rgb(255, 255, 255) !important;
+    font-size: 1em !important;
 }
 td {
     padding: 30px 10px 0px 10px
