--- a/external.css
+++ b/external.css
@@ -21,6 +21,18 @@ td {
 .jumbotron, footer {
     background-color: #006747; 
     color: white}
+Station {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+#message {
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+select {
+    font-size: 1.17em;
+}
 footer {
     margin-top: 100px
 }
